Bug #1730
openDTrace should ignore type information from modules with cth_parlabel mismatches
70%
Description
The CTF header contains both the name and label against which it has been made unique ("genunix" and "illumos_150" for eg). DTrace should ignore information from modules where the parlabel does not match the label in the actual parent module.
This would avoid problems from closed modules made unique against ancient genunixs for instance.
It is possible that mdb should be similarly extended.
Updated by Rich Lowe over 11 years ago
Since the CTF LABEL is derived from $VERSION, one thing which will break here is incremental builds across changes to VERSION (which will induce label mismatches in much the same fashion).
Updated by Rich Lowe over 11 years ago
- Status changed from New to Feedback
- % Done changed from 0 to 30
I have a simple prototype of this on github, as a child of the GCC4 work and intertwined with a copy of #1731 (for ease of testing): https://github.com/richlowe/illumos-gate/compare/gcc/upgrade...ctf/check-parent-label
I've pinged Bryan and Adam, regarding a number of things I either don't understand (multiple labels), things that may be bad ideas (this whole thing), etc.
It's also unclear whether the induced $VERSION-sensitivity also makes this a non-starter
Updated by Rich Lowe almost 11 years ago
- Category changed from tools - gate/build tools to DTrace
- Status changed from Feedback to In Progress
- % Done changed from 30 to 70
- Tags deleted (
needs-triage)