1730 DTrace should ignore type information from modules with cth_parlabel mismatches Reviewed by: Keith Wesolowski <keith.wesolowski@joyent.com> Reviewed by: Adam Leventhal <ahl@delphix.com>